# ApplicationCoreLiveDemo

./: CMakeLists.txt  README.md  devices.dmap  exampleApp_mapping.xml  qthm.dmap  uaExpertView  uaExpert_01.uap  uaExpert_02.uap  uaExpert_03.uap  uaExpert_04.uap  uaExpert_06.uap  uaExpert_07.uap
src/: TimerDummyDevice.cc  demoApp.cc
src/deltas/: 02_Controller.txt  03_monitorVoltages.txt  04_connectTo.txt  05_tags.txt  06_pipe.txt  07_moduleGroup.txt  08_multipleOvens.txt
